MFH: Fixed bug #46746 (xmlrpc_decode_request outputs non-suppressable error when given bad data).