ext/xmlrpc/libxmlrpc/xml_element.c
@@ -31,7 +31,7 @@
 */
 
 
-static const char rcsid[] = "#(@) $Id: xml_element.c,v 1.9.4.3 2008/12/17 21:45:31 iliaa Exp $";
+static const char rcsid[] = "#(@) $Id: xml_element.c,v 1.9.4.1.2.1 2008/12/09 17:22:12 iliaa Exp $";
 
 
 
@@ -44,12 +44,10 @@ static const char rcsid[] = "#(@) $Id: xml_element.c,v 1.9.4.3 2008/12/17 21:45:
  *   06/2000
  * HISTORY
  *   $Log: xml_element.c,v $
- *   Revision 1.9.4.3  2008/12/17 21:45:31  iliaa
- *   MFB: remove fprintf usage
+ *   Revision 1.9.4.1.2.1  2008/12/09 17:22:12  iliaa
  *
- *   Revision 1.9.4.2  2008/12/17 00:30:48  iliaa
- *
- *   MFH: removed unused var
+ *   MFH: Fixed bug #46746 (xmlrpc_decode_request outputs non-suppressable error
+ *   when given bad data).
  *
  *   Revision 1.9.4.1  2006/07/30 11:34:02  tony2001
  *   MFH: fix compile warnings (#38257)
@@ -385,7 +383,7 @@ static void xml_element_serialize(xml_element *el, int (*fptr)(void *data, const
    depth++;
 
    if(!el) {
-/*      fprintf(stderr, "Nothing to write\n"); */
+      /* fprintf(stderr, "Nothing to write\n"); */
       return;
    }
    if(!options) {
@@ -723,7 +721,7 @@ xml_element* xml_elem_parse_buf(const char* in_buf, int len, XML_ELEM_INPUT_OPTI
          int line_num = XML_GetCurrentLineNumber(parser);
          int col_num = XML_GetCurrentColumnNumber(parser);
          long byte_idx = XML_GetCurrentByteIndex(parser);
-/*         int byte_total = XML_GetCurrentByteCount(parser); */
+         int byte_total = XML_GetCurrentByteCount(parser);
          const char * error_str = XML_ErrorString(err_code);
          if(byte_idx >= 0) {
              snprintf(buf, 
